# tarpc-fory-macros

./: Cargo.toml  README.md
src/: lib.rs
tests/: basic.rs  debug_expand.rs  streaming.rs
