[package]
name = "tarpc-fory-macros"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Proc-macro companion for tarpc-fory: #[fory_service] attribute"
repository = "https://github.com/justinholmes/tarpc-fory"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "parsing", "printing", "visit"] }
quote = "1"
proc-macro2 = "1"
