[package]
name = "tarpc-fory-macros"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Proc-macro companion for tarpc-fory: #[fory_service] attribute"
repository = "https://github.com/justinholmes/tarpc-fory"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "parsing", "printing", "visit"] }
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
# tarpc-fory needed so ::tarpc_fory:: paths in the macro-generated code compile.
# The basic.rs test does NOT use #[tarpc::service] so there are no duplicate-impl
# conflicts with the fork's cfg(feature = "fory") gated code.
tarpc-fory = { path = "../tarpc-fory" }
fory = "0.17"
fory-core = "0.17"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
